--- a/src/motorway-milestones/index.html
+++ b/src/motorway-milestones/index.html
@@ -24,15 +24,16 @@
 		<div class="row">
 			<div class="col-12 col-sm-3">
 				<table class="table table-bordered table-sm">
-				<thead>
-					<tr>
-						<th>Магистрала</th>
-						<th>Налични</th>
-						<th>Липсващи</th>
-					</tr>
-				</thead>
-				<tbody></tbody>
-			</table>
+					<thead>
+						<tr>
+							<th>Магистрала</th>
+							<th>Налични</th>
+							<th>Липсващи</th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
+				Последно обновяване на данните: <span id="last_updated"></span>
 			</div>
 			<div class="col-12 col-sm-9">
 				<div id="map"></div>
