add qa for road network

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,14 @@
 					</div>
 				</div>
 			</div>
+			<div class="col">
+				<div class="card" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title">Пътна мрежа</h5>
+						<p class="card-text">Инструмент за визуализация на пътната мрежа в България, базирана на данни от OpenStreetMap.</p>
+						<a href="./road-network/" class="btn btn-primary">Към инструмента</a>
+					</div>
+				</div>
 		</div>
 	</main>
 </body>
