--- a/src/atp-osm/index.html
+++ b/src/atp-osm/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="bg">
 <head>
+	<base href="/">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ATP <=> OSM - Инструменти за OSM:BG</title>
+	<title>ATP <=> OSM - Инструменти за OSM-BG</title>
 	<link rel="stylesheet" href="/src/assets/scss/custom.scss">
 	<style>
 		#map {
